terraform/modules/network/nat.tf
resource "google_compute_router_nat" "main" {
  name   = "${var.project_name}-nat"
  router = google_compute_router.main.name
  region = var.region

  nat_ip_allocate_option = "AUTO_ONLY"

  source_subnetwork_ip_ranges_to_nat = "LIST_OF_SUBNETWORKS"

  subnetwork {
    name                    = google_compute_subnetwork.private.id
    source_ip_ranges_to_nat = ["ALL_IP_RANGES"]
  }
}
